--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "StylishText",
+  "name": "Secret Stylish Text",
   "description": "Telegram bot helps to get Stylish Text. Create your Fork now.",
   "keywords": [
     "telegram",
